--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,16 +3,26 @@
     <a class="navbar-brand col-12 col-sm-12">
       <img class="logo" src="../../assets/logoamarelo.png" alt="logo">
     </a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bdNavbar"
+      aria-controls="bdNavbar" aria-expanded="true" aria-label="Toggle navigation">
+      <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" class="bi" fill="currentColor" viewBox="0 0 16 16">
+        <path fill-rule="evenodd"
+          d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z">
+        </path>
+      </svg>
+    </button>
+    <div class="collapse navbar-collapse" id="">
       <ul class="navbar-nav mb-2 ms-5 p-5">
         <li class="nav-item ms-5 p-5">
           <a class="nav-link clique" routerLinkActive="active" routerLink="/home">Home</a>
         </li>
         <li class="nav-item ms-5 p-4">
-          <a class="nav-link clique2" routerLinkActive="active" routerLink="/entrega">Quero ser um Parceiro de Entregas!</a>
+          <a class="nav-link clique2" routerLinkActive="active" routerLink="/entrega">Quero ser um Parceiro de
+            Entregas!</a>
         </li>
         <li class="nav-item ms-5 p-4">
-          <a class="nav-link clique3" routerLinkActive="active" routerLink="/estabelecimento">Quero Cadastrar meu Estabelecimento</a>
+          <a class="nav-link clique3" routerLinkActive="active" routerLink="/estabelecimento">Quero Cadastrar meu
+            Estabelecimento</a>
         </li>
       </ul>
     </div>
