--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -28,3 +28,21 @@
 .active{
   color: #EBD700 !important;
 }
+
+@media(max-width: 560px){
+  .menu{
+    background-color: #212529;
+    width: 100%;
+    height: 250px;
+    border-radius: 20px;
+  }
+  ul, li{
+    display: flex;
+    align-items: center;
+    align-items: flex-start;
+    justify-content: flex-end;
+    align-items: center;
+    align-items: left;
+    color: #9E9E9E;
+  }
+}
