--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand col-12 col-sm-12">
-      <img class="logo" src="../../assets/logoamarelo.png" alt="logo">
+      <img class="logo" src="../../assets/logoamarelo.png" alt="logo" routerLinkActive="active" routerLink="/home">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#bdNavbar"
       aria-controls="bdNavbar" aria-expanded="true" aria-label="Toggle navigation">
@@ -11,16 +11,16 @@
         </path>
       </svg>
     </button>
-    <div class="collapse navbar-collapse" id="">
+    <div class="menu collapse navbar-collapse" id="bdNavbar">
       <ul class="navbar-nav mb-2 ms-5 p-5">
-        <li class="nav-item ms-5 p-5">
+        <li class="menuitem nav-item ms-5 p-5">
           <a class="nav-link clique" routerLinkActive="active" routerLink="/home">Home</a>
         </li>
-        <li class="nav-item ms-5 p-4">
+        <li class="menuitem nav-item ms-5 p-4">
           <a class="nav-link clique2" routerLinkActive="active" routerLink="/entrega">Quero ser um Parceiro de
             Entregas!</a>
         </li>
-        <li class="nav-item ms-5 p-4">
+        <li class="menuitem nav-item ms-5 p-4">
           <a class="nav-link clique3" routerLinkActive="active" routerLink="/estabelecimento">Quero Cadastrar meu
             Estabelecimento</a>
         </li>
